--- a/solar-control/rootfs/usr/bin/templates/index.html
+++ b/solar-control/rootfs/usr/bin/templates/index.html
@@ -10,6 +10,7 @@
         <a href="{{ url_for('configure_solar') }}" class="button">Configure Solar</a>
         <a href="{{ url_for('configure_battery') }}" class="button">Configure Battery</a>
         <a href="{{ url_for('configure_devices') }}" class="button">Configure Devices</a>
+        <a href="{{ url_for('debug') }}" class="button">Debug Interface</a>
     </div>
     
     <div class="card" id="sensor-values">
