--- a/solar-control/rootfs/usr/bin/templates/index.html
+++ b/solar-control/rootfs/usr/bin/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block content %}
     <div class="nav-menu">
-        <a href="{{ url_for('configure_solar') }}" class="button">Configure Solar</a>
+        <a href="{{ url_for('configure_grid') }}" class="button">Configure Grid</a>
         <a href="{{ url_for('configure_battery') }}" class="button">Configure Battery</a>
         <a href="{{ url_for('configure_devices') }}" class="button">Configure Devices</a>
         <a href="{{ url_for('debug') }}" class="button">Debug Interface</a>
